test/visibility/except/operatorsExceptions/exceptGreaterThanOrEqual.good
exceptGreaterThanOrEqual.chpl:5: In function 'main':
exceptGreaterThanOrEqual.chpl:8: error: unresolved call '>=(owned Foo, owned Foo)'
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note: this candidate did not match: >=(a: enum, b: enum)
exceptGreaterThanOrEqual.chpl:8: note: because actual argument #1 with type 'owned Foo'
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note: is passed to formal 'a: enum'
exceptGreaterThanOrEqual.chpl:8: note: other candidates are:
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:   >=(a: enum, b: enum)
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:   >=(a: uint(64), b: int(64))
note: and 66 other candidates, use --print-all-candidates to see them
