test/visibility/except/operatorsExceptions/exceptGreaterThanOrEqual.compopts
DefinesOp.chpl --main-module exceptGreaterThanOrEqual
